using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using WFC_Model;

[System.Serializable]
public struct TileAttributes 
{
    public Mesh mesh;
    public Material material;
    public SymmetryType symmetry;
}
